# uni-sdk

./: CMakeLists.txt  README.md
IS31FL3728/IS31FL3728/: CMakeLists.txt  IS31FL3728.c  main.c
adc/: CMakeLists.txt
adc/basic_adc/: basic_adc.c
application_examples/uni_wifi_sensor/: BMA400.h  CMakeLists.txt  PCA9554B.c  SHT4X.c  main.c
gpio/: CMakeLists.txt
gpio/gpio_irq/: CMakeLists.txt
gpio/gpio_read/: gpio_read.c
gpio/gpio_write/: gpio_write.c
i2c/: CMakeLists.txt
i2c/bus_scan/: CMakeLists.txt
mikroe_boards/: CMakeLists.txt
mikroe_boards/retroClick/: CMakeLists.txt
mikroe_boards/uni-8800-retro-click/: CMakeLists.txt  retroClick.h  uni-8800-retro-click.c
spi/spi_master/: CMakeLists.txt
uni-sdk-v2/unikit-examples/: CMakeLists.txt
uni-sdk-v2/unikit-examples/application_examples/: CMakeLists.txt
uni-sdk-v2/unikit-examples/application_examples/uni_button_display/: button.h  disp.c  main.c
uni-sdk-v2/unikit-examples/application_examples/uni_wifi_sensor/: Credential.h  PCA9554B.h  SHT4X.h  VEML6030.c  VEML6030.h  main.c
uni-sdk-v2/unikit-examples/blink/: blink.c
uni-sdk-v2/unikit-examples/button/: button.c
uni-sdk-v2/unikit-examples/dma/: CMakeLists.txt
uni-sdk-v2/unikit-examples/gpio/gpio_irq/: gpio_irq.c
uni-sdk-v2/unikit-examples/gpio/gpio_read/: gpio_read.c
uni-sdk-v2/unikit-examples/pwm/: CMakeLists.txt
uni-sdk-v2/unikit-examples/pwm/hello_pwm/: CmakeLists.txt  hello_pwm.c
uni-sdk-v2/unikit-examples/pwm/pwm_led_fade/: pwm_led_fade.c
uni-sdk-v2/unikit-examples/spi/spi_master/: spi_master.c
uni-sdk-v2/unikit-examples/spi/spi_slave/: spi_slave.c
uni-sdk-v2/unikit-examples/uart/uart_read/: uart_read.c
uni-sdk-v2/unikit-examples/uart/uart_write/: uart_write.c
uni-sdk-v2/unikit-examples/uni_breakouts/: CMakeLists.txt
uni-sdk-v2/unikit-examples/uni_breakouts/uni_click/: CMakeLists.txt  main.c
uni-sdk-v2/unikit-examples/uni_breakouts/uni_matrix/: main.c
uni-sdk-v2/unikit-examples/uni_breakouts/uni_sensor/: VEML6030.c
uni-sdk-v3/unikit-examples/adc/basic_adc/: CMakeLists.txt
uni-sdk-v3/unikit-examples/application_examples/uni_button_display/: button.c  disp.h  main.c
uni-sdk-v3/unikit-examples/application_examples/uni_wifi_sensor/: main.c
uni-sdk-v3/unikit-examples/blink/: CMakeLists.txt
uni-sdk-v3/unikit-examples/button/: CMakeLists.txt
uni-sdk-v3/unikit-examples/gpio/gpio_irq/: gpio_irq.c
uni-sdk-v3/unikit-examples/gpio/gpio_read/: CMakeLists.txt  gpio_read.c
uni-sdk-v3/unikit-examples/i2c/bus_scan/: bus_scan.c  bus_scan.h
uni-sdk-v3/unikit-examples/pwm/pwm_led_fade/: pwm_led_fade.c
uni-sdk-v3/unikit-examples/spi/spi_slave/: CMakeLists.txt
uni-sdk-v3/unikit-examples/uart/uart_read/: uart_read.c
uni-sdk-v3/unikit-examples/uart/uart_write/: CMakeLists.txt  uart_write.c
uni-sdk-v3/unikit-examples/uni_breakouts/uni_matrix/: CMakeLists.txt
uni-sdk-v3/unikit-examples/uni_breakouts/uni_sensor/: CMakeLists.txt  SHT4X.c  SHT4X.h  main.c
uni-sdk-v3/unikit-examples/watchdog/: CMakeLists.txt  watchdog.c
uni-sdk-v4/unikit-examples/adc/onboard_temperature/: onboard_temperature.c
uni-sdk-v4/unikit-examples/application_examples/uni_button_display/: CMakeLists.txt  main.c
uni-sdk-v4/unikit-examples/application_examples/uni_wifi_sensor/: BMA400.c  VEML6040.c  VEML6040.h
uni-sdk-v4/unikit-examples/blink/: blink.c
uni-sdk-v4/unikit-examples/button/: button.c
uni-sdk-v4/unikit-examples/dma/: dma_basic.c
uni-sdk-v4/unikit-examples/gpio/gpio_irq/: gpio_irq.c
uni-sdk-v4/unikit-examples/gpio/gpio_write/: CMakeLists.txt
uni-sdk-v4/unikit-examples/i2c/bus_scan/: bus_scan.c
uni-sdk-v4/unikit-examples/mikroe_boards/retroClick/: retroClick.c
uni-sdk-v4/unikit-examples/pwm/pwm_led_fade/: CMakeLists.txt  pwm_led_fade.c
uni-sdk-v4/unikit-examples/spi/: CMakeLists.txt
uni-sdk-v4/unikit-examples/timers/: CMakeLists.txt
uni-sdk-v4/unikit-examples/timers/hello_timer/: hello_timer.c
uni-sdk-v4/unikit-examples/uart/: CMakeLists.txt
uni-sdk-v4/unikit-examples/uart/uart_read/: CMakeLists.txt  uart_read.c
uni-sdk-v4/unikit-examples/uart/uart_write/: uart_write.c
uni-sdk-v4/unikit-examples/uni_breakouts/uni_click/: main.c  uni_click.c
uni-sdk-v4/unikit-examples/uni_breakouts/uni_matrix/: CMakeLists.txt  main.c
uni-sdk-v4/unikit-examples/uni_breakouts/uni_sensor/: BMA400.c  BMA400.h  CMakeLists.txt  VEML6040.h  main.c
uni_breakouts/uni-buttonmatrix-8/: CMakeLists.txt  pca9554b.c  pca9554b.h
uni_breakouts/uni-click/: uni-click.c
uni_breakouts/uni-dotmatrix/: CMakeLists.txt  IS31FL3728.h  uni-dotmatrix.c
uni_breakouts/uni-dotmatrix-8x16/: CMakeLists.txt  IS31FL3729.c  IS31FL3729.h  uni-dotmatrix.c
uni_breakouts/uni-dotmatrix-8x8/: IS31FL3728.c
uni_breakouts/uni-sensor-acc/: BMA400.c  BMA400.h  CMakeLists.txt  uni-sensor-acc.c
uni_breakouts/uni-sensor-color/: CMakeLists.txt  VEML6040.c  uni-sensor-color.c
uni_breakouts/uni-sensor-light/: CMakeLists.txt  VEML6030.h  uni-sensor-light.c
uni_breakouts/uni-sensor-th/: CMakeLists.txt  uni-sensor-th.c
